--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@ const CURRENCY = 'Kč';                         // валюта для цен
 
 /* ====== Товары (пример) ====== */
 const PRODUCTS = [
-  {id:'p1', title:'GRAPE ENERGY',  price:300, cat:'ELFBAR 2000', img:'https://i.imgur.com/jqT8i8M.jpeg'},
-  {id:'p2', title:'BLUE RAZZ ICE', price:300, cat:'ELFBAR 2000', img:'https://i.imgur.com/BI4gSTu.jpeg'},
-  {id:'p3', title:'WATERMELON',   price:300, cat:'ELFBAR 15000', img:'https://i.imgur.com/FkXqzLN.jpeg'},
-  {id:'p4', title:'STRAWBERRY',    price:300, cat:'ELFBAR 15000', img:'https://i.imgur.com/3tH0WfZ.jpeg'}
+  { id:'blueberry-bubble-gum', title:'Blueberry Bubble Gum',  price:300, cat:'ELFBAR 2000',  img:'img/blueberry-bubble-gum.jpg.jpg' },
+  { id:'blueberry-coconut',    title:'Blueberry Coconut',     price:300, cat:'ELFBAR 2000',  img:'img/blueberry-coconut.jpg.jpg' },
+  { id:'green-grape-rose',     title:'Green Grape Rose',      price:300, cat:'ELFBAR 15000', img:'img/green-grape-rose.jpg.jpg' },
+  { id:'jasmine-raspberry',    title:'Jasmine Raspberry',     price:300, cat:'ELFBAR 15000', img:'img/jasmine-raspberry.jpg.jpg' },
+  { id:'pink-lemonade',        title:'Pink Lemonade',         price:300, cat:'ELFBAR 15000', img:'img/pink-lemonade.jpg.jpg' },
 ];
 
 let state = {cat:'Все', q:'', cart:{}};
