--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
   <script>
     /* =================== НАСТРОЙКА =================== */
-    const WEB_APP_URL = 'PASTE_YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE'; // ← замените на свой /exec
+    const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbx4P7kHLxXLoKydNMzkqOumae5FpXyNACs1iI7MbBSsDBNNpvQsSby0njaB3BjNbMeRsQ/exec'; // ← замените на свой /exec
     const CURRENCY = 'Kč';
 
     /* =================== ДАННЫЕ =================== */
